...
        }
    }

    TopAppBar(
        navigationIcon = {
            IconButton(onClick = {
                AnalyticsTracker.uiControl("catalog_history_open", "履歴を開く")
                onNavigationClick()
            }) {
                Icon(
                    imageVector = Icons.Outlined.Menu,
                    contentDescription = "履歴を開く"
                )
...
